--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -27,7 +27,7 @@ select {
   border-radius: 4px;
 }
 
-input[type="submit"] {
+.new-user-button,input[type="submit"] {
   padding: 10px 20px;
   border: none;
   border-radius: 4px;
